--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=Campaign Notes
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=
-SHOW_CREATED_TIMESTAMP=false
+SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
-SHOW_UPDATED_TIMESTAMP=false
+SHOW_UPDATED_TIMESTAMP=true
 NOTE_ICON_DEFAULT=
 NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=
-STYLE_SETTINGS_BODY_CLASSES=
+STYLE_SETTINGS_CSS=body.css-settings-manager { --code-size: ""; --h1-size: 1.9em; --h2-size: 1.7em; --h3-size: 1.5em; --h4-size: 1.4em; --h5-size: 1.3em; --h6-size: 1.2em; --h6-weight: 600; --h5-weight: 600; --h4-weight: 600; --table-text-size: ""; --inline-title-size: 1.9em; --file-header-justify: left; --inline-title-font: Merriweather; --h3-weight: 600; --font-ui-small: 14px; --font-ui-smaller: 12px; --file-header-font-size: 0.8em; --file-header-font-weight: 500; --h5-variant: normal; --h2-weight: 600; --h4-style: normal; --h4-variant: normal; --h6-variant: normal; --h5-style: normal; --h3-font: Merriweather; --h4-font: Merriweather; --h5-font: Merriweather; --h6-font: Merriweather; --h1-weight: 600; --h3-style: normal; --h6-style: normal; --h2-font: Merriweather; --h1-font: Merriweather; } body.theme-light.css-settings-manager { --base-h: 129.99999999999997; --base-s: 14.285714285714276%; --base-l: 75.29411764705883%; --table-row-background-hover: #F9F3D1; --code-background: #E7EDF6; } body.theme-dark.css-settings-manager { }
+STYLE_SETTINGS_BODY_CLASSES=mod-macos is-frameless is-hidden-frameless obsidian-app theme-light show-inline-title show-ribbon show-view-header css-settings-manager callouts-default trim-cols checkbox-circle pdf-seamless-on pdf-invert-dark pdf-blend-light sidebar-tabs-default tab-names-off vault-profile-default ribbon-hidden maximize-tables-off row-lines col-lines table-lines row-alt tabs-default tab-stack-top minimal-tab-title-visible default is-focused
 USE_FULL_RESOLUTION_IMAGES=false
-THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
-BASE_THEME=dark
+THEME=https://raw.githubusercontent.com/kepano/obsidian-minimal/HEAD/theme.css
+BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
